// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should batch multiple findings in a single call 1`] = `
Array [
  Array [
    "https://123123.ods.opinsights.azure.com/api/logs?api-version=2016-04-01",
    Object {
      "body": "[{\\"id\\":\\"4560b3e6-1219-4f5f-9b44-6579f5a32407\\",\\"name\\":\\"Port 5601 is open\\",\\"category\\":\\"Open Port\\",\\"scan_id\\":\\"09988cdf-1fc7-4f85-95ee-1b1d65dbc7cc\\",\\"scan_name\\":\\"demo-scan\\",\\"scan_type\\":\\"Nmap\\",\\"scan_parameters\\":[\\"-Pn\\",\\"localhost\\"],\\"scan_labels\\":{\\"company\\":\\"iteratec\\"}},{\\"id\\":\\"4560b3e6-1219-4f5f-9b44-6579f5a32407\\",\\"name\\":\\"Port 5601 is open\\",\\"category\\":\\"Open Port\\",\\"scan_id\\":\\"09988cdf-1fc7-4f85-95ee-1b1d65dbc7cc\\",\\"scan_name\\":\\"demo-scan\\",\\"scan_type\\":\\"Nmap\\",\\"scan_parameters\\":[\\"-Pn\\",\\"localhost\\"],\\"scan_labels\\":{\\"company\\":\\"iteratec\\"}}]",
      "headers": Object {
        "Authorization": "SharedKey 123123:BeWwef01Uml5v56eoq4+PFkZ/FxkwNbJ2wGwzD0A6Rg=",
        "Log-Type": "SCB_Nmap",
        "content-type": "application/json",
        "x-ms-date": 2020-11-11T00:00:00.000Z,
      },
      "method": "POST",
    },
  ],
]
`;

exports[`should pull settings from env variables 1`] = `
Array [
  Array [
    "https://123123.ods.opinsights.azure.com/api/logs?api-version=2016-04-01",
    Object {
      "body": "[{\\"id\\":\\"4560b3e6-1219-4f5f-9b44-6579f5a32407\\",\\"name\\":\\"Port 5601 is open\\",\\"category\\":\\"Open Port\\",\\"scan_id\\":\\"09988cdf-1fc7-4f85-95ee-1b1d65dbc7cc\\",\\"scan_name\\":\\"demo-scan\\",\\"scan_type\\":\\"Nmap\\",\\"scan_parameters\\":[\\"-Pn\\",\\"localhost\\"],\\"scan_labels\\":{\\"company\\":\\"iteratec\\"}}]",
      "headers": Object {
        "Authorization": "SharedKey 123123:hYnj/mUzwD23iO1yAmgDoZcLu7/palVaaxiUgTCr1xQ=",
        "Log-Type": "SCB_Nmap",
        "content-type": "application/json",
        "x-ms-date": 2020-11-11T00:00:00.000Z,
      },
      "method": "POST",
    },
  ],
]
`;

exports[`should send findings to Azure Monitor 1`] = `
Array [
  Array [
    "https://123123.ods.opinsights.azure.com/api/logs?api-version=2016-04-01",
    Object {
      "body": "[{\\"id\\":\\"4560b3e6-1219-4f5f-9b44-6579f5a32407\\",\\"name\\":\\"Port 5601 is open\\",\\"category\\":\\"Open Port\\",\\"scan_id\\":\\"09988cdf-1fc7-4f85-95ee-1b1d65dbc7cc\\",\\"scan_name\\":\\"demo-scan\\",\\"scan_type\\":\\"Nmap\\",\\"scan_parameters\\":[\\"-Pn\\",\\"localhost\\"],\\"scan_labels\\":{\\"company\\":\\"iteratec\\"}}]",
      "headers": Object {
        "Authorization": "SharedKey 123123:hYnj/mUzwD23iO1yAmgDoZcLu7/palVaaxiUgTCr1xQ=",
        "Log-Type": "SCB_Nmap",
        "content-type": "application/json",
        "x-ms-date": 2020-11-11T00:00:00.000Z,
      },
      "method": "POST",
    },
  ],
]
`;
